--- a/notebooks/spotify_client.ipynb
+++ b/notebooks/spotify_client.ipynb
@@ -20,30 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "load_dotenv()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "load_dotenv()\n",
+    "\n",
     "client_id = environ.get('SPOTIFY_CLIENT_ID')\n",
     "client_secret = environ.get('SPOTIFY_CLIENT_SECRET')\n",
     "\n",
